Update index.html with correct font preloading

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
    <!-- Font Preloading -->
    <link
      rel="preload"
-     href="/fonts/SF-Pro-Display-Medium.woff2"
+     href="/fonts/SFPRODISPLAYMEDIUM.OTF"
      as="font"
-     type="font/woff2"
+     type="font/otf"
      crossorigin="anonymous"
    />
    <link
      rel="preload"
-     href="/fonts/Inter-Regular.woff2"
+     href="/fonts/SFPRODISPLAYREGULAR.OTF"
      as="font"
-     type="font/woff2"
+     type="font/otf"
      crossorigin="anonymous"
    />
    
