Use relative paths in index.html

--- a/index.html
+++ b/index.html
@@ -6,26 +6,26 @@
    <!-- Font Preloading -->
    <link
      rel="preload"
-     href="/fonts/SFPRODISPLAYMEDIUM.OTF"
+     href="./public/fonts/SFPRODISPLAYMEDIUM.OTF"
      as="font"
      type="font/otf"
      crossorigin="anonymous"
    />
    <link
      rel="preload"
-     href="/fonts/SFPRODISPLAYREGULAR.OTF"
+     href="./public/fonts/SFPRODISPLAYREGULAR.OTF"
      as="font"
      type="font/otf"
      crossorigin="anonymous"
    />
    
    <!-- Favicons (Ihre existierenden) -->
-   <link rel="icon" type="image/x-icon" href="/favicon.ico">
-   <link rel="icon" type="image/svg+xml" href="/images/logos/favicon.svg">
-   <link rel="icon" type="image/png" sizes="32x32" href="/images/logos/favicon-32x32.png">
-   <link rel="icon" type="image/png" sizes="16x16" href="/images/logos/favicon-16x16.png">
-   <link rel="apple-touch-icon" sizes="180x180" href="/images/logos/apple-touch-icon.png">
-   <link rel="mask-icon" href="/images/logos/favicon.svg" color="#171614">
+   <link rel="icon" type="image/x-icon" href="./public/favicon.ico">
+   <link rel="icon" type="image/svg+xml" href="./public/images/logos/favicon.svg">
+   <link rel="icon" type="image/png" sizes="32x32" href="./public/images/logos/favicon-32x32.png">
+   <link rel="icon" type="image/png" sizes="16x16" href="./public/images/logos/favicon-16x16.png">
+   <link rel="apple-touch-icon" sizes="180x180" href="./public/images/logos/apple-touch-icon.png">
+   <link rel="mask-icon" href="./public/images/logos/favicon.svg" color="#171614">
    
    <!-- Primary Meta Tags -->
    <meta name="title" content="roketX - Digital Marketing & Web Development">
@@ -49,7 +49,7 @@
    <meta property="og:image" content="https://roketx.de/images/logos/og-image.jpg">
    
    <!-- PWA Support -->
-   <link rel="manifest" href="/manifest.json">
+   <link rel="manifest" href="./public/manifest.json">
    <meta name="mobile-web-app-capable" content="yes">
    <meta name="apple-mobile-web-app-capable" content="yes">
    <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -75,6 +75,6 @@
  </head>
  <body>
    <div id="root"></div>
-   <script type="module" src="/src/main.jsx"></script>
+   <script type="module" src="./src/main.jsx"></script>
  </body>
 </html>
