Simplify and fix index.html for proper path handling

--- a/index.html
+++ b/index.html
@@ -3,29 +3,8 @@
  <head>
    <meta charset="UTF-8" />
    
-   <!-- Font Preloading -->
-   <link
-     rel="preload"
-     href="./public/fonts/SFPRODISPLAYMEDIUM.OTF"
-     as="font"
-     type="font/otf"
-     crossorigin="anonymous"
-   />
-   <link
-     rel="preload"
-     href="./public/fonts/SFPRODISPLAYREGULAR.OTF"
-     as="font"
-     type="font/otf"
-     crossorigin="anonymous"
-   />
-   
-   <!-- Favicons (Ihre existierenden) -->
-   <link rel="icon" type="image/x-icon" href="./public/favicon.ico">
-   <link rel="icon" type="image/svg+xml" href="./public/images/logos/favicon.svg">
-   <link rel="icon" type="image/png" sizes="32x32" href="./public/images/logos/favicon-32x32.png">
-   <link rel="icon" type="image/png" sizes="16x16" href="./public/images/logos/favicon-16x16.png">
-   <link rel="apple-touch-icon" sizes="180x180" href="./public/images/logos/apple-touch-icon.png">
-   <link rel="mask-icon" href="./public/images/logos/favicon.svg" color="#171614">
+   <!-- Favicons -->
+   <link rel="icon" type="image/x-icon" href="/favicon.ico">
    
    <!-- Primary Meta Tags -->
    <meta name="title" content="roketX - Digital Marketing & Web Development">
@@ -46,13 +25,6 @@
    <meta property="og:url" content="https://roketx.de/">
    <meta property="og:title" content="roketX - Digital Marketing & Web Development">
    <meta property="og:description" content="Von der kleinen Idee zum erfolgreichen Business. Professionelle Webentwicklung und digitales Marketing für Ihren Erfolg.">
-   <meta property="og:image" content="https://roketx.de/images/logos/og-image.jpg">
-   
-   <!-- PWA Support -->
-   <link rel="manifest" href="./public/manifest.json">
-   <meta name="mobile-web-app-capable" content="yes">
-   <meta name="apple-mobile-web-app-capable" content="yes">
-   <meta name="apple-mobile-web-app-status-bar-style" content="black">
    
    <!-- Schema.org markup -->
    <script type="application/ld+json">
@@ -61,7 +33,6 @@
      "@type": "Organization",
      "name": "roketX",
      "url": "https://roketx.de",
-     "logo": "https://roketx.de/images/logos/og-image.jpg",
      "contactPoint": {
        "@type": "ContactPoint",
        "telephone": "+49-173-8528482",
@@ -75,6 +46,6 @@
  </head>
  <body>
    <div id="root"></div>
-   <script type="module" src="./src/main.jsx"></script>
+   <script type="module" src="/src/main.jsx"></script>
  </body>
 </html>
